--- a/singolo2.css
+++ b/singolo2.css
@@ -287,6 +287,7 @@ body {
   padding: 65px 0 75px;
   color: #767e9e;
   background-color: #2d303a;
+  border-bottom: 6px solid #323746;
 }
 .portfolio__title {
   margin-bottom: 20px;
@@ -328,4 +329,77 @@ body {
   display: block;
   max-width: 100%;
   height: 100%;
+}
+
+/* About */
+.about {
+  padding: 65px 0 75px;
+  color: #666d89;
+  background-color: #f2f2f2;
+  border-bottom: 6px solid #ffffff;
+}
+.about__title {
+  margin-bottom: 30px;
+  font-weight: 900;
+  font-size: 30px;
+}
+.about__description {
+  margin-bottom: 50px;
+  font-size: 18px;
+}
+
+/* User */
+.user__info {
+  margin: 0 0 21px 0;
+}
+.user__image {
+  display: block;
+  width: 300px;
+  height: 300px;
+}
+.user__name {
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 1;
+}
+.user__bio {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 22px;
+}
+
+/* Social */
+.social {
+  display: inline-flex;
+  align-items: center;
+}
+.social__item {
+  margin-right: 8px;
+}
+.social__item:last-child {
+  margin-right: 0;
+}
+.social__link {
+  display: block;
+  width: 32px;
+  height: 32px;
+  background: transparent no-repeat center/contain;
+  border-radius: 50%;
+  transition: background-color 0.3s ease;
+}
+.social__link--fb {
+  background-image: url(./assets/images/fb-icon.png);
+}
+.social__link--go {
+  background-image: url(./assets/images/go-icon.png);
+}
+.social__link--tw {
+  background-image: url(./assets/images/tw-icon.png);
+}
+.social__link--lk {
+  background-image: url(./assets/images/lk-icon.png);
+}
+.social__link:hover, .social__link:active {
+  background-color: #ffffff;
+  transform: scale(1.05);
 }
