--- a/singolo3.css
+++ b/singolo3.css
@@ -1,3 +1,109 @@
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  text-decoration: underline;
+  /* 2 */
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+  /* 2 */
+  border-bottom: none;
+  /* 1 */
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  margin: 0;
+  /* 2 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  font-family: inherit;
+  /* 1 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
+  /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
+  /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+  padding: 0;
+  border-style: none;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
 @font-face {
   font-style: normal;
   font-weight: 300;
@@ -210,12 +316,10 @@ body {
 }
 
 .services {
+  padding: 38px 0 60px;
   color: #666d89;
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
-}
-.services__inner {
-  padding: 38px 0;
 }
 .services__header {
   padding-bottom: 28px;
@@ -230,22 +334,6 @@ body {
   text-align: justify;
   letter-spacing: -0.04px;
   word-spacing: 0.4px;
-}
-
-/* Grid  */
-.grid {
-  display: grid;
-}
-.grid--3col {
-  grid-gap: 35px 20px;
-  grid-template-columns: repeat(3, 300px);
-}
-.grid--4col {
-  grid-gap: 20px;
-  grid-template-columns: repeat(4, 200px);
-}
-.grid--4row {
-  grid-template-rows: repeat(3, 190px);
 }
 
 /* Feature */
@@ -284,34 +372,38 @@ body {
 
 /* Portfolio */
 .portfolio {
-  padding: 65px 0 75px;
+  padding: 38px 0 67px;
   color: #767e9e;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
 }
 .portfolio__title {
-  margin-bottom: 20px;
+  margin-bottom: 21px;
   font-weight: 900;
   font-size: 30px;
 }
-.portfolio__desription {
-  margin-bottom: 20px;
+.portfolio__description {
+  margin-bottom: 5px;
+  font-weight: 300;
 }
 .portfolio__navigation {
-  margin-bottom: 20px;
+  margin-bottom: 16px;
 }
 .portfolio__list {
   display: inline-flex;
 }
 .portfolio__item {
-  margin-right: 10px;
+  margin-right: 8px;
 }
 .portfolio__item:last-child {
   margin-right: 0;
 }
 .portfolio__link {
   display: block;
-  padding: 0 7px 0 8px;
+  padding: 0 6px 0 8px;
+  font-size: 12px;
+  line-height: 19px;
+  text-align: center;
   color: #666d89;
   text-transform: none;
   border: 1px solid currentColor;
@@ -333,24 +425,28 @@ body {
 
 /* About */
 .about {
-  padding: 65px 0 75px;
+  padding: 38px 0 58px;
   color: #666d89;
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
 }
 .about__title {
-  margin-bottom: 30px;
+  margin-bottom: 21px;
   font-weight: 900;
   font-size: 30px;
+  text-transform: capitalize;
 }
 .about__description {
-  margin-bottom: 50px;
+  margin-bottom: 44px;
+  font-weight: 300;
   font-size: 18px;
+  line-height: 30px;
+  text-align: justify;
 }
 
 /* User */
 .user__info {
-  margin: 0 0 21px 0;
+  margin: 0 0 22px 0;
 }
 .user__image {
   display: block;
@@ -358,14 +454,17 @@ body {
   height: 300px;
 }
 .user__name {
+  margin-bottom: 9px;
   font-weight: 900;
   font-size: 18px;
   line-height: 1;
 }
 .user__bio {
+  margin: 0;
   font-weight: 400;
   font-size: 12px;
   line-height: 22px;
+  text-align: justify;
 }
 
 /* Social */
@@ -402,4 +501,165 @@ body {
 .social__link:hover, .social__link:active {
   background-color: #ffffff;
   transform: scale(1.05);
+}
+
+/* Contact */
+.contact {
+  padding: 38px 0 51px;
+  color: #f0d8d9;
+  background-color: #f06c64;
+  border-bottom: 6px solid #ea676b;
+}
+.contact__title {
+  margin-bottom: 21px;
+  font-weight: 900;
+  font-size: 30px;
+}
+.contact__description {
+  margin-bottom: 43px;
+  font-weight: 300;
+  font-size: 18px;
+  text-align: justify;
+}
+.contact__subtitle {
+  margin: 0 0 11px;
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 1;
+}
+.contact__text, .contact__address {
+  margin-bottom: 22px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 21.5px;
+  text-align: justify;
+}
+.contact__text a, .contact__address a {
+  font-weight: normal;
+  text-transform: lowercase;
+}
+.contact__address-detail::before {
+  content: "";
+  position: relative;
+  top: -1px;
+  display: inline-block;
+  width: 12px;
+  height: 11px;
+  margin-right: 8px;
+  vertical-align: middle;
+  text-align: center;
+  background: no-repeat 50% 50%/contain;
+}
+.contact__address--city::before {
+  background-image: url(./assets/images/location-icon.svg);
+}
+.contact__address--phone::before {
+  background-image: url(./assets/images/phone-icon.svg);
+}
+.contact__address--email::before {
+  top: 1px;
+  width: 13px;
+  background-image: url(./assets/images/mail-icon.svg);
+}
+
+.columns {
+  display: flex;
+  justify-content: space-between;
+}
+
+.col {
+  flex-shrink: 0;
+}
+.col-left {
+  width: 620px;
+}
+.col-right {
+  width: 300px;
+}
+
+/* Form */
+.form {
+  width: 100%;
+}
+.form__item {
+  margin-bottom: 16px;
+}
+.form__item:last-child {
+  margin-bottom: 0;
+}
+.form__field {
+  display: block;
+  width: 100%;
+  padding: 4px 14px;
+  font: inherit;
+  font-size: 12px;
+  color: #f48c8f;
+  background-color: #d6564f;
+  border: 0;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+.form__field--textarea {
+  height: 202px;
+}
+.form__field::-webkit-input-placeholder {
+  color: currentColor;
+}
+.form__field::-moz-placeholder {
+  color: currentColor;
+}
+.form__field:focus {
+  outline-color: #c4362e;
+}
+.form__field:focus::-webkit-input-placeholder {
+  color: transparent;
+}
+.form__field:focus::-moz-placeholder {
+  color: transparent;
+}
+
+/* Footer */
+.footer {
+  padding: 11px 0;
+  color: #666d89;
+  background-color: #2d303a;
+}
+.footer__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.copyright {
+  font-weight: normal;
+  font-size: 12px;
+}
+
+/* Grid  */
+.grid {
+  display: grid;
+  overflow: hidden;
+}
+.grid--3col {
+  grid-gap: 35px 20px;
+  grid-template-columns: 299px 301px 300px;
+}
+.grid--4col {
+  grid-gap: 20px;
+  grid-template-columns: 220px 220px 220px 220px;
+}
+.grid--4row {
+  grid-template-rows: 187px 187px 187px;
+}
+
+/* Hidden class */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
 }
