--- a/style.css
+++ b/style.css
@@ -641,6 +641,9 @@ body {
 .copyright {
   font-weight: normal;
   font-size: 12px;
+  -webkit-user-select: none;
+  user-select: none;
+  pointer-events: none;
 }
 
 /* Grid  */
