--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ textarea {
 }
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -425,6 +426,10 @@ body {
   display: block;
   max-width: 100%;
   height: 100%;
+  transition: border 0.25s linear;
+}
+.portfolio .is-active .portfolio__image {
+  border: 5px solid #f06c64;
 }
 
 /* About */
