--- a/style.css
+++ b/style.css
@@ -235,28 +235,84 @@ body {
 }
 
 .slider {
-  background-color: #f06c64;
-  border-bottom: 6px solid #ea676b;
+  position: relative;
 }
 .slider__list {
   position: relative;
   display: grid;
-  padding: 54px 0 57px;
 }
 .slider__slide {
-  display: flex;
-  align-items: center;
   width: 100%;
   height: 100%;
-  padding: 0 72px;
+  padding: 54px 0 57px;
   opacity: 0;
-  transition: opacity 0.5s linear;
+  transition: opacity 0.2s linear;
   grid-column: 1/-1;
   grid-row: 1/-1;
 }
 .slider__slide--visible {
-  z-index: 1;
   opacity: 1;
+}
+.slider__slide--red {
+  background-color: #f06c64;
+  border-bottom: 6px solid #ea676b;
+}
+.slider__slide--blue {
+  background-color: #648bf0;
+  border-color: #648bf0;
+}
+.slider__inner {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 0 72px;
+}
+.slider__inner--center {
+  justify-content: center;
+}
+.slider__zone {
+  position: relative;
+}
+.slider__zone::after {
+  content: "";
+  position: absolute;
+  width: 188px;
+  height: 333px;
+  background-color: #000000;
+  border-radius: 4px;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+.slider__zone--vertical::after {
+  top: 64px;
+  left: 14px;
+}
+.slider__zone--horizontal::after {
+  top: -60px;
+  left: 133px;
+  transform: rotate(90deg);
+}
+.slider__zone--off::after {
+  opacity: 1;
+}
+.slider__phone-button {
+  position: absolute;
+  z-index: 2;
+  width: 42px;
+  height: 42px;
+  font-size: 0;
+  background-color: transparent;
+  border-color: transparent;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.slider__phone-button--vertical {
+  bottom: 44px;
+  left: 86px;
+}
+.slider__phone-button--hotizontal {
+  bottom: 123px;
+  left: 8px;
 }
 .slider__image {
   position: relative;
@@ -269,17 +325,21 @@ body {
 .slider__image--right {
   top: -2px;
 }
+.slider__image--center {
+  margin: 0 -26px;
+}
 
 .slider__controls {
   position: absolute;
   top: 0;
   left: 0;
+  left: 50%;
   z-index: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
   height: 100%;
+  transform: translateX(-50%);
 }
 
 .slider__btn {
