--- a/style.css
+++ b/style.css
@@ -839,13 +839,6 @@ body {
   margin-bottom: 0;
 }
 
-.form__item--absolute {
-  position: absolute;
-  bottom: 0;
-  left: 640px;
-  width: 100%;
-}
-
 .form__field {
   display: block;
   width: 100%;
@@ -944,6 +937,55 @@ body {
 
 .grid__cell {
   transition: all 0.35s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+/* Popup */
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(45, 48, 58, 0.3);
+}
+
+.popup__button {
+  display: block;
+  min-width: 150px;
+  margin: 0 auto;
+  padding: 10px;
+  font: inherit;
+  color: #ffffff;
+  text-transform: uppercase;
+  background: #2d303a;
+  border: 0;
+  border-radius: 5px;
+  cursor: pointer;
+  cursor: pointer;
+}
+
+.popup__inner {
+  width: 360px;
+  padding: 40px;
+  background-color: #ffffff;
+  border-radius: 25px;
+}
+
+.popup__title {
+  margin-bottom: 15px;
+  font-size: 36px;
+  text-align: center;
+}
+
+.popup p {
+  margin-bottom: 15px;
+  padding: 5px 0;
+  font-weight: bold;
+  font-size: 20px;
+  border-bottom: 2px solid #000000;
 }
 
 /* Hidden class */
