--- a/style.css
+++ b/style.css
@@ -179,6 +179,10 @@ body {
 }
 
 .header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 10;
   color: #ffffff;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
@@ -251,6 +255,7 @@ body {
 .slider__list {
   position: relative;
   display: grid;
+  overflow: hidden;
 }
 
 .slider__slide {
@@ -265,6 +270,14 @@ body {
 
 .slider__slide--visible {
   opacity: 1;
+}
+
+.slider__slide.next .slider__inner {
+  animation: fadeInLeft 0.75s linear;
+}
+
+.slider__slide.prev .slider__inner {
+  animation: fadeInRight 0.75s linear;
 }
 
 .slider__slide--red {
@@ -407,9 +420,35 @@ body {
   background-image: url(./assets/images/chevron-right.svg);
 }
 
+.slider__btn.disabled {
+  pointer-events: none;
+}
+
 .slider__btn:hover, .slider__btn:active {
   transform: scale(1.2);
   opacity: 0.8;
+}
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
 
 .services {
@@ -524,7 +563,12 @@ body {
   transition: all 0.3s ease;
 }
 
-.portfolio__link--active, .portfolio__link:hover {
+.portfolio__link--active {
+  pointer-events: none;
+  color: #dedede;
+}
+
+.portfolio__link:hover {
   color: #dedede;
 }
 
